<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="16dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/query_flexbox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:alignContent="flex_start"
            app:alignItems="center"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:showDivider="end" />

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/query_begin_group"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/begin_group" />

        <Button
            android:id="@+id/query_end_group"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_group" />

        <Button
            android:id="@+id/query_and"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/and" />

        <Button
            android:id="@+id/query_or"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/or" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/query_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/clear" />

        <EditText
            android:id="@+id/query_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/keyword"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:scrollHorizontally="true" />

        <Button
            android:id="@+id/query_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/enter" />


    </LinearLayout>

</LinearLayout>
